--- a/gb/21/5/13/n12945091.md
+++ b/gb/21/5/13/n12945091.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王赫：中国经济迷思之二——超大规模市场？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12945165-4c1dbde474ee7b6c65f7cde6c1ae66e5-.jpeg" />
 <h6></h6>
 <hr>
 	<p>【大纪元2021年05月13日讯】5月7日至10日，首届中国国际消费品博览会在海南举行，中共称中国“这个超大规模消费市场是全世界共享的机遇”。在此之前，中共还自2018年起每年举办中国国际进口博览会（CIIE），称这是“坚定支持贸易自由化和经济全球化、主动向世界开放市场的重大举措”。果真如此吗？</p>
 <p>赞成者可以说出很多理由：从基本国情看，中国十四亿多人口，大概4亿中等收入人群，人均GDP超过1万美元；从最终消费总量数据看，2016年至2019年，中国全年社会消费品零售总额从33.2万亿元（人民币，下同）增长到41.2万亿，已与世界最大消费国美国相差无几（2018年中国零售市场相当于美国的95%），在“不太长的时间里”将成为全球最大的国内市场；从个案看，中国已成为世界一些品牌的最大市场，例如欧莱雅北亚区总裁及中国首席执行官费博瑞称“2020年，中国市场首次成为法国美妆最大的市场”，等等。</p>
-<p>然而，事实并非如此简单。2020年1月8日，中共商务部副部长兼国际贸易谈判副代表王受文尚信心满满地称，中国消费市场潜力巨大，今后在“不太长的时间里”将成为全球最大的国内市场；不料，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>爆发，虽然中共声称“率先走出疫情、领跑<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E5%A4%8D%E8%8B%8F.md#1">经济复苏</a>”，虽然美国遭受重创，但是，2020年中国市场规模仍没能超越美国，社会消费品零售总额反比上年下降3.9%（为391,981亿元）。一些人又把超越希望寄托在2021年。</p>
+<p>然而，事实并非如此简单。2020年1月8日，中共商务部副部长兼国际贸易谈判副代表王受文尚信心满满地称，中国消费市场潜力巨大，今后在“不太长的时间里”将成为全球最大的国内市场；不料，疫情爆发，虽然中共声称“率先走出疫情、领跑经济复苏”，虽然美国遭受重创，但是，2020年中国市场规模仍没能超越美国，社会消费品零售总额反比上年下降3.9%（为391,981亿元）。一些人又把超越希望寄托在2021年。</p>
 <p>不过，即使今年中国超过美国成为世界第一大零售国，其容纳能力仍远非理想。为什么会这样呢？本文略讲两点。</p>
-<h2>其一，中国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E7%8E%87.md#1">消费率</a>远低于正常水平</h2>
-<p>2020年中国最终<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E8%B4%B9%E7%8E%87.md#1">消费率</a>（最终消费占GDP比重）接近55%，而一般发达国家的最终消费率为80%左右。不论是相比于高水平的发达国家，还是同等人均GDP发展水平的国家，或是文化地缘相近的邻国，中国的最终消费率都非常低，且相比于同等人均GDP国家，要低25个百分点左右。如果仅计算居民消费率（将最终消费中的政府消费部分扣除），中国与其它国家的消费水平差距会减小到20个百分点左右，但也同样在同水平国家、地域邻国中是最低的。也就是说，无论怎么比较，中国的居民消费率都偏低。</p>
+<h2>其一，中国的消费率远低于正常水平</h2>
+<p>2020年中国最终消费率（最终消费占GDP比重）接近55%，而一般发达国家的最终消费率为80%左右。不论是相比于高水平的发达国家，还是同等人均GDP发展水平的国家，或是文化地缘相近的邻国，中国的最终消费率都非常低，且相比于同等人均GDP国家，要低25个百分点左右。如果仅计算居民消费率（将最终消费中的政府消费部分扣除），中国与其它国家的消费水平差距会减小到20个百分点左右，但也同样在同水平国家、地域邻国中是最低的。也就是说，无论怎么比较，中国的居民消费率都偏低。</p>
 <p>为什么会这样？中国不是“人均国民总收入超过1万美元，达到世界中等偏上收入水平”了吗（2020年7月，国家统计局公布数据）？即使就同等发展水平比较，中国的消费水平为什么远远低于其它国家？中国人的收入到哪去了？陆媒刊发的“中国的居民消费在全世界处于什么水平？”一文指出两点。</p>
 <p>第一，无论是初次分配还是再分配，居民部门在整个国民收入中占比的总体趋势都是在下降的，收入分配整体向政府倾斜；也就是说，相比于过去，同样取得一万元的国民收入，在分配中，居民的获得变少了，从而影响了消费。第二，中国收入差距大幅高于其它国家，而在同等收入水平下，收入差距越大，消费率就会越低（因为当收入达到一定水平后，消费在收入中的占比会逐渐降低，也就是边际消费倾向递减，其消费率会变低）。</p>
 <p>这两点原因，矛头都指向中共：中共（通过政府）攫取了越来越多的财富，同时制造了贫富悬殊，使中国人的消费远低于正常水平。</p>
@@ -28,45 +28,36 @@
 <p>中国市场的实际容量，并没有“中国超大规模市场论”所认为的那么巨大。这除了中国的消费率远低于正常水平和虚幻的4亿中产阶级（中等收入人群）消费能力这两个原因之外，还有一个原因，就是中国对外商进入中国市场设置了许多障碍，诸如进口管制、强制出口比例、强制技术转让等等，使中国市场的真实吸引力大打折扣。此外，中共的一些雷人政治手段，比如最近的煽动民众抵制H&amp;M等等外国品牌的运动，对中国市场的伤害也是不容轻视的。</p>
 <p>责任编辑：高义#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/1/n12372450.md#1">前证监会主席：大陆绝大部分人收入有限</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/9/8/n12388519.md#1">大陆消费停滞 内循环或成泡影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环缺动力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/25/n12501523.md#1">大陆学者：制度缺陷导致大陆贫富差距拉大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/1/n12372450.md#1">前证监会主席：大陆绝大部分人收入有限</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/8/n12388519.md#1">大陆消费停滞 内循环或成泡影</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环缺动力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/25/n12501523.md#1">大陆学者：制度缺陷导致大陆贫富差距拉大</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923681.md#1">【古道人生】洗衣妇原来是武林高手 巧惩恶吏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946008.md#1">【热点互动】投资印度 郭台铭再战2024大选？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945959.md#1">【菁英论坛】冷眼看两会 李克强黯然退场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923489.md#1">【思想领袖】医生的谎言如何造就性别产业（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944711.md#1">习罕见批李克强？习李暗战三个细节引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944563.md#1">【秦鹏观察】GDP目标加“左右” 李克强泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944827.md#1">中共公布国务院机构重组方案 暂未涉公安国安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944500.md#1">老演员李琦京城摆摊卖烤肉 50元一串引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944672.md#1">心疼詹雅雯将3度开脑 大S具俊瞱与小S献花送暖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944433.md#1">孙俪大提琴考级试 自嘲紧张得脸红 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944565.md#1">修杰楷40岁生日 贾静雯晒合照甜蜜告白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945104.md#1">两巨星隔空联动 周星驰喊话周杰伦“香港见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917282.md#1">这一时间运动对心脏最好 2技巧令效果翻倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928982.md#1">抗癌延寿作用强大 石榴这样吃最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943990.md#1">自然疗愈！照着步骤做 有望改善身体健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943910.md#1">微不足道的小善利己利人 让自己更幸福</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/13/n12945091.htm">王赫：中国经济迷思之二——超大规模市场？</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/5/13/n12945091.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/21/5/13/n12945091.htm">王赫：中国经济迷思之二——超大规模市场？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/21/5/13/n12945091.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
